Core/objects/Recommended_Badge__c/Recommended_Badge__c.object-meta.xml
<CustomObject>
    <description>Recommended Trailhead badge.</description>
    <label>Recommended Badge</label>
    <nameField>
        <displayFormat>RB-{0000000}</displayFormat>
        <label>Recommended Badge Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Recommended Badges</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>