Core/objects/Recommended_Badge__c/fields/Badge__c.field-meta.xml
<CustomField>
    <fullName>Badge__c</fullName>
    <label>Badge</label>
    <referenceTo>trailheadapp__Badge__c</referenceTo>
    <relationshipLabel>Recommended Badges</relationshipLabel>
    <relationshipName>Recommended_Badges</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>