Core/objects/Recommended_Badge__c/fields/Badge_Icon__c.field-meta.xml
<CustomField>
    <fullName>Badge_Icon__c</fullName>
    <description>Rendered icon for corresponding trailheadapp__Badge__c.</description>
    <formula>IMAGE( Icon__c , BadgeName__c , 50, 50)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Badge Icon</label>
    <type>Text</type>
</CustomField>