Core/objects/Recommended_Badge__c/fields/Badge_Mix_Key__c.field-meta.xml
<CustomField>
    <fullName>Badge_Mix_Key__c</fullName>
    <label>Badge Mix Key</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>