Core/objects/Recommended_Badge__c/fields/Badge_Name__c.field-meta.xml
<CustomField>
    <fullName>Badge_Name__c</fullName>
    <formula>Badge__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Badge Name</label>
    <type>Text</type>
</CustomField>