Core/objects/Recommended_Badge__c/fields/BadgeAPIName__c.field-meta.xml
<CustomField>
    <fullName>BadgeAPIName__c</fullName>
    <label>Badge API Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>