Core/objects/Recommended_Badge__c/fields/BadgeName__c.field-meta.xml
<CustomField>
    <fullName>BadgeName__c</fullName>
    <description>Name of the corresponding trailheadapp__Badge__c.</description>
    <label>Badge Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>