Core/objects/Recommended_Badge__c/fields/Category_Rank__c.field-meta.xml
<CustomField>
    <fullName>Category_Rank__c</fullName>
    <label>Category Rank</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>