Core/objects/Recommended_Badge__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Value of the trailheadapp__Description__c field on the corresponding trailheadapp__Badge__c.</description>
    <label>Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>