Core/objects/Recommended_Badge__c/fields/High_Priority_Id__c.field-meta.xml
<CustomField>
    <fullName>High_Priority_Id__c</fullName>
    <formula>IF(High_Priority__c, &apos;HP&apos; + Id, &apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>High Priority Id</label>
    <type>Text</type>
</CustomField>