Core/objects/Recommended_Badge__c/fields/Hours_Estimate__c.field-meta.xml
<CustomField>
    <fullName>Hours_Estimate__c</fullName>
    <label>Hours Estimate</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>