Core/objects/Recommended_Badge__c/fields/HyperlinkedName__c.field-meta.xml
<CustomField>
    <fullName>HyperlinkedName__c</fullName>
    <formula>HYPERLINK(URL__c, Badge_Name__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Hyperlinked Name</label>
    <type>Text</type>
</CustomField>