Core/objects/Recommended_Badge__c/fields/Icon__c.field-meta.xml
<CustomField>
    <fullName>Icon__c</fullName>
    <description>Value of the trailheadapp__Icon__c field on the corresponding trailheadapp__Badge__c.</description>
    <label>Icon</label>
    <type>Url</type>
</CustomField>