Core/objects/Recommended_Badge__c/fields/Minutes_Estimate__c.field-meta.xml
<CustomField>
    <fullName>Minutes_Estimate__c</fullName>
    <label>Minutes Estimate</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>