Core/objects/Recommended_Badge__c/fields/Mix_Category__c.field-meta.xml
<CustomField>
    <fullName>Mix_Category__c</fullName>
    <label>Mix Category</label>
    <referenceTo>Mix_Category__c</referenceTo>
    <relationshipLabel>Recommended Badges</relationshipLabel>
    <relationshipName>Recommended_Badges</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>