Core/objects/Recommended_Badge__c/fields/Products__c.field-meta.xml
<CustomField>
    <fullName>Products__c</fullName>
    <description>Value of the trailheadapp__Products__c on the corresponding trailheadapp__Badge__c.</description>
    <label>Products</label>
    <type>TextArea</type>
</CustomField>