Core/objects/Recommended_Badge__c/fields/Saved_by_CMT__c.field-meta.xml
<CustomField>
    <fullName>Saved_by_CMT__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Saved by CMT</label>
    <type>Checkbox</type>
</CustomField>