Core/objects/Recommended_Badge__c/fields/Time_Estimate__c.field-meta.xml
<CustomField>
    <fullName>Time_Estimate__c</fullName>
    <formula>IF(TEXT(Hours_Estimate__c) != &apos;&apos;, TEXT(Hours_Estimate__c) &amp; &apos; hr &apos;, &apos;&apos;) &amp; 
IF(TEXT(Minutes_Estimate__c) != &apos;&apos;, TEXT(Minutes_Estimate__c) &amp; &apos; min&apos;, &apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Time Estimate</label>
    <type>Text</type>
</CustomField>