Core/objects/Recommended_Badge__c/fields/Time_Estimate_Minutes__c.field-meta.xml
<CustomField>
    <fullName>Time_Estimate_Minutes__c</fullName>
    <formula>Minutes_Estimate__c + Hours_Estimate__c * 60</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Time Estimate (Minutes)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>