Core/objects/Recommended_Badge__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>Value of trailheadapp__Type__c field on corresponding trailheadapp__Badge__c.</description>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Module</fullName>
                <default>true</default>
                <label>Module</label>
            </value>
            <value>
                <fullName>Project</fullName>
            </value>
            <value>
                <fullName>Superbadge</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>