Core/objects/Recommended_Badge__c/fields/URL__c.field-meta.xml
<CustomField>
    <fullName>URL__c</fullName>
    <description>Value of the URL for the corresponding trailheadapp__Badge__c.</description>
    <label>URL</label>
    <type>Url</type>
</CustomField>